[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "zk-SNARK library"
readme = "README.md"
homepage = "https://github.com/zkcrypto/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/zkcrypto/bellman"
version = "0.10.0"
edition = "2018"

[dependencies]
bitvec = "0.22"
blake2s_simd = "0.5"
ff = "0.10"
group = "0.10"
pairing = { version = "0.20", optional = true }
rand_core = "0.6"
byteorder = "1"
subtle = "2.2.1"

# Multicore dependencies
crossbeam-channel = { version = "0.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.8", optional = true }
num_cpus = { version = "1", optional = true }
rayon = { version = "1.3.0", optional = true }

[dev-dependencies]
bls12_381 = "0.5"
criterion = "0.3"
hex-literal = "0.3"
rand = "0.8"
rand_xorshift = "0.3"
sha2 = "0.9"

[features]
groth16 = ["pairing"]
multicore = ["crossbeam-channel", "lazy_static", "log", "num_cpus", "rayon"]
default = ["groth16", "multicore"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[bench]]
name = "batch"
harness = false

[[bench]]
name = "slow"
harness = false

[badges]
maintenance = { status = "actively-developed" }
