[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "zk-SNARK library"
readme = "README.md"
homepage = "https://github.com/zkcrypto/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/zkcrypto/bellman"
version = "0.10.0"
edition = "2018"

[dependencies]
bitvec = "0.22"
blake2s_simd = "0.5"
ff = "0.10"
futures = "0.1"
futures-cpupool = { version = "0.1", optional = true }
group = "0.10"
num_cpus = { version = "1", optional = true }
crossbeam = { version = "0.7", optional = true }
pairing = { version = "0.20", optional = true }
rand_core = "0.6"
byteorder = "1"
subtle = "2.2.1"

[dev-dependencies]
bls12_381 = "0.5"
criterion = "0.3"
hex-literal = "0.3"
rand = "0.8"
rand_xorshift = "0.3"
sha2 = "0.9"

[features]
groth16 = ["pairing"]
multicore = ["futures-cpupool", "crossbeam", "num_cpus"]
default = ["groth16", "multicore"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[bench]]
name = "batch"
harness = false

[[bench]]
name = "slow"
harness = false

[badges]
maintenance = { status = "actively-developed" }
