[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "zk-SNARK library"
readme = "README.md"
homepage = "https://github.com/zkcrypto/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/zkcrypto/bellman"
version = "0.13.1"
edition = "2021"

[dependencies]
bitvec = "1"
blake2s_simd = "1"
ff = "0.12"
group = "0.12"
pairing = { version = "0.22", optional = true }
rand_core = "0.6"
byteorder = "1"
subtle = "2.2.1"

# Multicore dependencies
crossbeam-channel = { version = "0.5.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4", optional = true }
num_cpus = { version = "1", optional = true }
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
bls12_381 = "0.7"
criterion = "0.3"
hex-literal = "0.3"
rand = "0.8"
rand_xorshift = "0.3"
sha2 = "0.10"

[features]
groth16 = ["pairing"]
multicore = ["crossbeam-channel", "lazy_static", "log", "num_cpus", "rayon", "rand_core/getrandom"]
default = ["groth16", "multicore"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[bench]]
name = "batch"
harness = false

[[bench]]
name = "slow"
harness = false

[badges]
maintenance = { status = "actively-developed" }
