[package]
name = "groth16"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition = "2021"
rust-version = "1.60"
description = "Groth16 prover and verifier for Bellman"
readme = "README.md"
homepage = "https://github.com/zkcrypto/bellman"
repository = "https://github.com/zkcrypto/bellman"
license = "MIT OR Apache-2.0"

[dependencies]
bellman = { version = "0.14", path = "../" }
byteorder = "1"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand_core = "0.6"

[dev-dependencies]
bls12_381 = "0.8"
criterion = "0.4"
rand = "0.8"
subtle = "2.2.1"

[[bench]]
name = "batch"
harness = false
