# This root project only contains shared tests and benchmarks. This is very
# similar to a Cargo workspace. We're not using a real workspace because
# https://github.com/rust-lang/cargo/issues/5015 makes it hard to run tests
# with --no-default-features, to test the no_std case.

[package]
name = "blake2_simd_root"
version = "0.0.0"
authors = ["Jack O'Connor"]
description = "a pure Rust BLAKE2b implementation with dynamic SIMD"
license = "MIT"
repository = "https://github.com/oconnor663/blake2b_simd"
documentation = "https://docs.rs/blake2b_simd"
readme = "README.md"
edition = "2018"

[features]
# Note that this root crates never builds itself with no_std. The "std" feature
# only controls whether blake2b_simd and blake2s_simd build with no_std.
default = ["std"]
std = ["blake2b_simd/std", "blake2s_simd/std"]

[dependencies]
arrayvec = "0.5.0"
blake2b_simd = { path = "./blake2b", default-features = false }
blake2s_simd = { path = "./blake2s", default-features = false }
blake2-avx2-sneves = { path = "benches/blake2-avx2-sneves", optional = true }
hex = "0.3.2"
kangarootwelve = { path = "benches/kangarootwelve", optional = true }
lazy_static = "1.3.0"
libsodium-ffi = { version = "0.1.17", optional = true }
openssl = { version = "0.10.23", optional = true }
page_size = "0.4.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
rand = "0.7.0"
rand_chacha = "0.2.0"
ring = { version = "0.16.0", optional = true }
