[package]
name = "blake2b_simd"
version = "0.5.9"
authors = ["Jack O'Connor"]
description = "a pure Rust BLAKE2b implementation with dynamic SIMD"
license = "MIT"
repository = "https://github.com/oconnor663/blake2_simd"
documentation = "https://docs.rs/blake2b_simd"
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
arrayref = "0.3.5"
arrayvec = { version = "0.5.0", default-features = false }
constant_time_eq = "0.1.3"
